fix(style): Move percentage circle down 100% to align with background circle

--- a/frontend/src/components/Circle/Circle.scss
+++ b/frontend/src/components/Circle/Circle.scss
@@ -16,7 +16,9 @@
 
     .circle-percentage {
         transition: stroke-dashoffset 0.1s linear;
-        transform: rotate(-90deg);
-        transform-origin: 0% 0%;
+
+        // 102.5px is the radius of the circle
+        // translateX because the circle is rotated -90deg
+        transform: rotate(-90deg) translateX(calc(-102.5px * 2));
     }
 }
